# DataSalaryKedro

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
data/02_intermediate/: cleaned_salary_data.xlsx
data/06_models/: regressor.pkl
notebooks/: Data_Science.ipynb
src/arquitec/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/arquitec/pipelines/data_processing/: nodes.py  pipeline.py
src/arquitec/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
src/arquitec/pipelines/reporting/: nodes.py  pipeline.py
