[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "arquitec"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
arquitec = "arquitec.__main__:main"

[tool.kedro]
package_name = "arquitec"
project_name = "arquitec"
kedro_init_version = "1.0.0"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "arquitec.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "e1de4890d20b434c8f45793b83ce3c2e"
